--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,14 +68,14 @@ dependencies:
   file_picker: ^5.0.1
   fluttertoast: ^8.0.8
   flutter_dialogs: ^3.0.0
-
   flutter_downloader: ^1.7.1
   # only IOS gallery_saver: ^2.3.2
   flutter_app_badger: ^1.3.0
-  
   square_in_app_payments: ^1.7.2
   uuid: ^3.0.3
   flutter_linkify: ^5.0.2
+
+  maps_launcher: ^2.0.1
 
 dev_dependencies:
   flutter_test:
